<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="394dp"
        android:layout_height="93dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/nickname_string"
        android:textAlignment="center"
        android:textColor="#FEFCFC"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="354dp"
        android:layout_height="62dp"
        android:ems="10"
        android:fontFamily="@font/fredoka"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FBF9F9"
        android:textColorHint="#ACCFF2"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:background="@drawable/btn_back"
        android:elevation="8dp"
        android:text="@string/signup"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:transitionName="transition_login_btn"
        app:backgroundTint="#FBFCFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

</androidx.constraintlayout.widget.ConstraintLayout>